--- a/res/layout/activity_base.xml
+++ b/res/layout/activity_base.xml
@@ -14,8 +14,9 @@
 
         <ImageButton
             android:id="@+id/base_image"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="3dp"
             android:contentDescription="@string/app_name"
             android:background="@color/lanse"
             android:src="@drawable/back_n" />
