--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -102,6 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:background="@android:color/transparent"
                 android:text="@string/language_change" />
         </LinearLayout>
